Clean up small images, preventing stretching

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -217,7 +217,7 @@ blockquote img {
   float: right;
   text-align: right;
   margin-left: 1em !important;
-  width: 35%;
+  max-width: 35%;
 }
 
 .pull-quote {
